# aoc

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json
inc/: Trie.hpp  getfile.h  getfile.hpp  libaoc.h
solutions/awk/: 22-2.awk  22-3.awk
solutions/src/: 22-1-0.c  22-1-1.c  22-2-0.c  22-2-1.c  22-3-0.c  22-3-1.c  22-4-0.c  22-4-1.c
src/: Trie.cpp  day1.cpp  input_f2intbuf.c
