cmake_minimum_required(VERSION 3.20)
project(aoc, LANGUAGES CXX)
if (APPLE)
    set(CMAKE_C_COMPILER /opt/homebrew/opt/llvm/bin/clang)
    set(CMAKE_CXX_COMPILER /opt/homebrew/opt/llvm/bin/clang++)
endif (APPLE)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_compile_options(-Wall -Wextra -Wpedantic -Weverything -g3 -O3 -fsanitize=address -fsanitize=leak)
add_link_options(-fsanitize=address -fsanitize=leak -O3)
add_executable(day1 ${PROJECT_SOURCE_DIR}/src/day1.cpp)
add_library(aoc SHARED ${PROJECT_SOURCE_DIR}/src/Trie.cpp)
include_directories(AFTER ${PROJECT_SOURCE_DIR}/inc)
target_link_libraries(day1 aoc)
